--- a/Factory/Builder/Builder.csproj
+++ b/Factory/Builder/Builder.csproj
@@ -5,4 +5,9 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="Buildes\" />
+    <Folder Include="Diretores\" />
+  </ItemGroup>
+
 </Project>
